Added sound effects framework and the restart/thinking button.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 		<script type="text/javascript" src="js/jquery.minesweeper.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function() {
-				$("#minefield").minesweeper({mines:10});
+				$("#minefield").minesweeper({
+					size:[10,10],
+					mines:10
+				});
 			});
 		</script>
 	</head>
